testdata/golden/sema/valid/directives/valid_directive_module/test_dir/_test_dir.sg
// Directive module with pragma directive
pragma module::test_dir, directive;

pub fn eq(a: int, b: int) -> bool { return a == b; }
