testdata/golden/sema/invalid/module_inconsistent_name/first.sg
pragma module::one;

fn first() {}
